# rust-game

./: Cargo.toml
src/: binio.rs  client.rs  codecs.rs  game.rs  main.rs  ui.rs
src/game/: mod.rs
src/game/actor/: bullet.rs  mod.rs  player.rs
src/server/: io.rs  mod.rs  proto.rs
