[package]
name = "arpg_take2"
version = "0.1.0"
authors = ["Dylan Halperin <dylan@dylemma.io>"]

[dependencies]
bincode = "^0.8"
bytes = "0.4"
futures = "0.1"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-serde = "0.1"
#tokio-serde-bincode = "0.1"
tokio-serde-bincode = { git = "https://github.com/alexcrichton/tokio-serde-bincode" }

# dependencies added for UI, using piston
piston = "*"
pistoncore-input = "0.19.0"
piston_window = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
nalgebra = "0.13.0"
fps_counter = "1.0.0"